remove chat, add home interent guide

--- a/students/index.html
+++ b/students/index.html
@@ -251,10 +251,11 @@
                 </div>
                 <!--end return block-->
                 <div class="col-md-8" id="wifi">
-                  <h3 id="internet">Internet Access Options</h3>
-
+                  <h3 id="internet">Internet Access</h3>
+                  <p>Technology Services created a guide to help students <a href="https://ts.vcu.edu/askit/network-services/home-network-troubleshooting/">troubleshoot home networks.</a></p>
                   <p>Wifi/internet access:  employees and students can add “hot spots” to their wireless cellphone plans or access VCU SafeNet while being in your car in/around the VCU campuses.  </p>  
-                  <p>A number of companies are offering both reduced cost and increased bandwidth options.</p>   <ul>  
+                  <p>A number of companies are offering both reduced cost and increased bandwidth options.</p>   
+                  <ul>  
                     <li><a href="https://docs.fcc.gov/public/attachments/DOC-363033A1.pdf">FCC agreement</a> stating that providers will waive late fees, not cutoff service for lack of payment, and open hot-spots</li>            
                     <li><a href="https://corporate.comcast.com/press/releases/internet-essentials-low-income-broadband-coronavirus-pandemic">Comcast</a> - offers free WiFi for 2 months to low income families plus all Xfinity hot-spots are free to the public during this time</li>
                     <li><a href="https://www.internetessentials.com/">Internet Essentials</a> - $9.95 a month with no contract</li>
@@ -280,7 +281,6 @@
                     <li>The IT Support Center on MPC will have limited staff at the walk-up counter through this week (March 16-March 20) and an appointment is needed. After Friday, the walk-up counter service will stop, as the library will be closed to the public.</li>
                     <li>The IT Support Center on MCV is closed.</li>
                     <li>The IT Support Center call center (for both campuses) is and will continue to be operational. Due to the volume of calls, people are asked to be patient.</li>
-                    <li>The IT Support Center does have limited hours of chat available.</li>
                     <li>The most effective and streamlined way of contacting the IT Support Center or for any “enterprise” service support (i.e. Blackboard, Kaltura, VCU Mobile, login issues, etc) is to<a href="https://itsupport.vcu.edu/"> submit a support ticket</a>.</li>
                     <li>Please encourage students to visit the <a href="https://ts.vcu.edu/it-support-center/">IT Support Center’s website</a> for future updates.</li>
                   </ul>
@@ -387,7 +387,7 @@
                   <!--row inclusive excellence-->
                   <div class="col-md-8" id="inclusive">
                     <h3 id="inclusive">Statement from VCU’s Inclusive Excellence:</h3>
-                    <p>Virginia Commonwealth University remains committed to promoting a culture of inclusion for all its employees, patients and students. Discrimination or discriminatory harassment is unlawful. It is also harmful to the well-being of our university community. We are aware of the news reports regarding bullying, harassment and stereotyping of Chinese Americans and persons of Asian descent in light of the coronavirus (COVID-19). There is no place for this sort of behavior, especially not at VCU. Our university values, specifically those related to diversity and inclusion, have withstood many difficult situations and trying times, and they will not falter now. Please be assured that VCU will make every effort to prevent the occurence of unlawful discrimination and, if necessary, take prompt and appropriate action to remedy and prevent its reoccurence. Every member of our community is asked to:</p>
+                    <p>Virginia Commonwealth University remains committed to promoting a culture of inclusion for all its employees, patients and students. Discrimination or discriminatory harassment is unlawful. It is also harmful to the well-being of our university community. We are aware of the news reports regarding bullying, harassment and stereotyping of Chinese Americans and persons of Asian descent in light of the coronavirus (COVID-19). There is no place for this sort of behavior, especially not at VCU. Our university values, specifically those related to diversity and inclusion, have withstood many difficult situations and trying times, and they will not falter now. Please be assured that VCU will make every effort to prevent the occurrence of unlawful discrimination and, if necessary, take prompt and appropriate action to remedy and prevent its reoccurrence. Every member of our community is asked to:</p>
                     <ul>
                       <li>Become familiar with the university’s policy on <a href="https://policy.vcu.edu/universitywide-policies/policies/preventing-and-responding-to-discrimination.html">preventing and responding to discrimination</a> in the VCU Policy Library.</li>
                       <li>Consult with Equity and Access Services or <a href="https://hr.vcu.edu/">VCU Human Resources</a> for additional guidance on how to maintain a bias-free environment.</li>
