--- a/students/index.html
+++ b/students/index.html
@@ -59,33 +59,34 @@
                           </button>
                       </h2>
                   </div>
-                  <div id="internet-access" class="collapse" aria-labelledby="int-a" data-parent="#student-tec">
+                  <div id="internet-access" class="collapse" aria-labelledby="int-a" data-parent="#student-tech">
                       <div class="card-body">
                          STATEMENT
                       </div>
                   </div>
               </div>
               <!--internet-access card end-->     
-<!--zoom card-->
-                       <div class="card">
-                           <div class="card-header" id="zoom-help">
-                              <h2 class="mb-0">
-                                   <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#zoom" aria-expanded="false" aria-controls="zoom">
-                                     Zoom Video Conferencing
-                                   </button>
-                               </h2>
-                           </div>
-                           <div id="zoom" class="collapse" aria-labelledby="zoom-help" data-parent="#stud">
-                               <div class="card-body">
-                                  Other stuff
-                               </div>
-                           </div>
+              <!--zoom card-->
+               <div class="card">
+                   <div class="card-header" id="zoom-help">
+                      <h2 class="mb-0">
+                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#zoom" aria-expanded="false" aria-controls="zoom">
+                             Zoom Video Conferencing
+                           </button>
+                       </h2>
+                   </div>
+                   <div id="zoom" class="collapse" aria-labelledby="zoom-help" data-parent="#student-tech">
+                       <div class="card-body">
+                          Other stuff
                        </div>
-                       <!--zoom card end-->                       
-
+                   </div>
+               </div>
+               <!--zoom card end-->                       
             </div>
             <!--end tech support accordion-->
 
+
+            <div class="accordion" id="material">
               <!--materials card-->
               <div class="card">
                 <div class="card-header" id="headingTwo">
@@ -95,7 +96,7 @@
                     </button>
                   </h2>
                 </div>
-                <div id="materials" class="collapse" aria-labelledby="headingTwo" data-parent="#student-support">
+                <div id="materials" class="collapse" aria-labelledby="headingTwo" data-parent="#material">
                   <div class="card-body">
                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                   </div>
