--- a/students/index.html
+++ b/students/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="../css/main.css?ver=2.5">
     </head>
     <body>
-      <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
+      <!--this is an evolving document -- be kind to it and the intent of the authors-->
         <div class="container content-primary__content" id="keep-on">
           <div class="row justify-content-md-center" id="top">            
             <div class="col-md-8">
@@ -30,97 +30,42 @@
               <p>Student success remains the core of our mission, and during these “remote” times, our goal across the university is to continue to provide resources to help all of our students accomplish the successful completion of this semester.  Below you will find a summary list of resources available to students.  If you cannot find an answer to your question or resource need, the referral forms at the bottom of this page can be submitted for additional assistance from our campus officials responsible for the area of your request.</p>
             </div>
 
-
           <div class="col-md-8">
-            <h2>Access to the Internet / Technology Difficulties</h2>
-            <div class="accordion" id="student-tech">
-              <!--tech support card-->
+            <div class="accordion" id="stu-support">
+              <!--tech card-->
               <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#laptop-loans" aria-expanded="false" aria-controls="laptop-loans">
-                      Laptop Loans
-                    </button>
-                  </h2>
-                </div>
-                <div id="laptop-loans" class="collapse" aria-labelledby="headingOne" data-parent="#student-tech">
-                  <div class="card-body">
-                   statement
-                  </div>
-                </div>
-              </div>
-              <!--tech support card end-->
-              <!--internet-access card-->
-              <div class="card">
-                  <div class="card-header" id="int-a">
+                  <div class="card-header" id="tech-support">
                      <h2 class="mb-0">
-                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#internet-access" aria-expanded="false" aria-controls="internet-access">
-                            Internet Access
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#tech" aria-expanded="false" aria-controls="tech">
+                            Access to the Internet / Technology Difficulties
                           </button>
                       </h2>
                   </div>
-                  <div id="internet-access" class="collapse" aria-labelledby="int-a" data-parent="#student-tech">
+                  <div id="tech" class="collapse" aria-labelledby="tech-support" data-parent="#stu-support">
                       <div class="card-body">
-                         STATEMENT
+                         laptop loans etc
                       </div>
                   </div>
               </div>
-              <!--internet-access card end-->     
-              <!--zoom card-->
-               <div class="card">
-                   <div class="card-header" id="zoom-help">
-                      <h2 class="mb-0">
-                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#zoom" aria-expanded="false" aria-controls="zoom">
-                             Zoom Video Conferencing
-                           </button>
-                       </h2>
-                   </div>
-                   <div id="zoom" class="collapse" aria-labelledby="zoom-help" data-parent="#student-tech">
-                       <div class="card-body">
-                          Other stuff
-                       </div>
-                   </div>
-               </div>
-               <!--zoom card end-->                       
-            </div>
-            <!--end tech support accordion-->
-
-
-            <div class="accordion" id="material">
+              <!--tech card end-->
               <!--materials card-->
               <div class="card">
-                <div class="card-header" id="headingTwo">
-                  <h2 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#materials" aria-expanded="false" aria-controls="materials">
-                      Access to Textbooks or Course Materials
-                    </button>
-                  </h2>
-                </div>
-                <div id="materials" class="collapse" aria-labelledby="headingTwo" data-parent="#material">
-                  <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  <div class="card-header" id="stu-materials">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#materials" aria-expanded="false" aria-controls="materials">
+                            Access to Textbooks or Course Materials
+                          </button>
+                      </h2>
                   </div>
-                </div>
-              </div>
-              <!--end materials card-->
-              <!--academic support card-->
-              <div class="card">
-                <div class="card-header" id="headingThree">
-                  <h2 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#academ-support" aria-expanded="false" aria-controls="academ-support">
-                      Academic Support (Tutoring, Supplemental Instruction, Writing)
-                    </button>
-                  </h2>
-                </div>
-                <div id="academ-support" class="collapse" aria-labelledby="headingThree" data-parent="#student-support">
-                  <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  <div id="materials" class="collapse" aria-labelledby="stu-materials" data-parent="#stu-support">
+                      <div class="card-body">
+                         basics
+                      </div>
                   </div>
-                </div>
               </div>
-              <!--academic support card end-->
+              <!--materials card end-->
+              
             </div>
-          </div>
         </div>
        
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
