all the main accordion titles

--- a/students/index.html
+++ b/students/index.html
@@ -64,7 +64,118 @@
                   </div>
               </div>
               <!--materials card end-->
-              
+              <!--academic-support card-->
+              <div class="card">
+                  <div class="card-header" id="acad-sup">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#academic-support" aria-expanded="false" aria-controls="academic-support">
+                            Academic Support (Tutoring, Supplemental Instruction, Writing)
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="academic-support" class="collapse" aria-labelledby="acad-sup" data-parent="#stu-support">
+                      <div class="card-body">
+                         words
+                      </div>
+                  </div>
+              </div>
+              <!--academic-support card end-->
+              <!--advising card-->
+              <div class="card">
+                  <div class="card-header" id="acad-advice">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#advising" aria-expanded="false" aria-controls="advising">
+                            Academic Advising (Withdrawals, Course Registration)
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="advising" class="collapse" aria-labelledby="acad-advice" data-parent="#stu-support">
+                      <div class="card-body">
+                         words
+                      </div>
+                  </div>
+              </div>
+              <!--advising card end-->
+              <!--wellness card-->
+              <div class="card">
+                  <div class="card-header" id="being-well">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#wellness" aria-expanded="false" aria-controls="wellness">
+                            Being Well
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="wellness" class="collapse" aria-labelledby="being-well" data-parent="#stu-support">
+                      <div class="card-body">
+                         being well text
+                      </div>
+                  </div>
+              </div>
+              <!--wellness card end-->
+              <!--housing card-->
+              <div class="card">
+                  <div class="card-header" id="housing-needs">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#housing" aria-expanded="false" aria-controls="housing">
+                            Housing Needs
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="housing" class="collapse" aria-labelledby="housing-needs" data-parent="#stu-support">
+                      <div class="card-body">
+                         Housing Needs text
+                      </div>
+                  </div>
+              </div>
+              <!--housing card end-->
+              <!--finance card-->
+              <div class="card">
+                  <div class="card-header" id="financial-needs">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#finance" aria-expanded="false" aria-controls="finance">
+                            Financial Needs
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="finance" class="collapse" aria-labelledby="financial-needs" data-parent="#stu-support">
+                      <div class="card-body">
+                         Financial Needs text
+                      </div>
+                  </div>
+              </div>
+              <!--finance card end-->
+              <!--accommodations card-->
+              <div class="card">
+                  <div class="card-header" id="acad-accommodations">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accommodations" aria-expanded="false" aria-controls="accommodations">
+                            Academic Accommodations
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="accommodations" class="collapse" aria-labelledby="acad-accommodations" data-parent="#stu-support">
+                      <div class="card-body">
+                         Academic Accommodations text
+                      </div>
+                  </div>
+              </div>
+              <!--accommodations card end-->
+              <!--help card-->
+              <div class="card">
+                  <div class="card-header" id="help-needed">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#help" aria-expanded="false" aria-controls="help">
+                            Still Need Help?  Tell Us How We Can Help
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="help" class="collapse" aria-labelledby="help-needed" data-parent="#stu-support">
+                      <div class="card-body">
+                         Still Need Help?  Tell Us How We Can Help text
+                      </div>
+                  </div>
+              </div>
+              <!--help card end-->
             </div>
         </div>
        
