js expand by #, bit of content

--- a/students/index.html
+++ b/students/index.html
@@ -289,7 +289,8 @@
                   </div>
                   <div id="help" class="collapse" aria-labelledby="help-needed" data-parent="#stu-support">
                       <div class="card-body">
-                         Still Need Help?  Tell Us How We Can Help text
+                         <p>If you are a current student who still has unanswered questions and you need additional support or questions answered, please use this self-referral form below:</p>
+                         <a class="btn btn-primary" href="">I need additional help</a>
                       </div>
                   </div>
               </div>
