--- a/students/index.html
+++ b/students/index.html
@@ -19,7 +19,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/main.css?ver=2.5">
+        <link rel="stylesheet" href="../css/main.css?ver=2.6">
     </head>
     <body>
       <!--this is an evolving document -- be kind to it and the intent of the authors-->
@@ -290,13 +290,51 @@
                   <div id="help" class="collapse" aria-labelledby="help-needed" data-parent="#stu-support">
                       <div class="card-body">
                          <p>If you are a current student who still has unanswered questions and you need additional support or questions answered, please use this self-referral form below:</p>
-                         <a class="btn btn-primary" href="">I need additional help</a>
+                         <button class="btn btn-primary" data-toggle="modal" data-target="#helpModal">I need additional help</button>
+                         <p>Faculty, staff, or students who know of a student needing assistance and were not able to find an answer from the above resources are encouraged to submit the form below:</p>
+                          <button class="btn btn-primary" data-toggle="modal" data-target="#facHelpModal">Refer a student for additional support</button>
                       </div>
                   </div>
               </div>
               <!--help card end-->
             </div>
         </div>
+        <!-- student Modal -->
+          <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSap7mOVQATcw4rT-2yy4_oKxUMJYxFCo972MIR2vw9ay_aw/viewform?embedded=true" width="100%" height="899" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+           <!-- faculty Modal -->
+          <div class="modal fade" id="facHelpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScpO42w9fDfI3gB51H2eo1AyG8ovyNqwazIz5tGBFN2r38F6A/viewform?embedded=true" width="100%" height="899" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
        
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         
@@ -307,3 +345,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
+
