--- a/students/index.html
+++ b/students/index.html
@@ -289,10 +289,12 @@
                   </div>
                   <div id="help" class="collapse" aria-labelledby="help-needed" data-parent="#stu-support">
                       <div class="card-body">
-                         <p>If you are a current student who still has unanswered questions and you need additional support or questions answered, please use this self-referral form below:</p>
-                         <button class="btn btn-primary" data-toggle="modal" data-target="#helpModal">I need additional help</button>
-                         <p>Faculty, staff, or students who know of a student needing assistance and were not able to find an answer from the above resources are encouraged to submit the form below:</p>
-                          <button class="btn btn-primary" data-toggle="modal" data-target="#facHelpModal">Refer a student for additional support</button>
+                         <p>If you are a current student who still has unanswered questions and you need additional support or questions answered, please use this self-referral form below (You will need to be logged into your VCU Google account.):</p>
+                        <!--  <button class="btn btn-primary" data-toggle="modal" data-target="#helpModal">I need additional help</button> -->
+                        <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfSap7mOVQATcw4rT-2yy4_oKxUMJYxFCo972MIR2vw9ay_aw/viewform">I need additional help</a>
+                         <p>Faculty, staff, or students who know of a student needing assistance and were not able to find an answer from the above resources are encouraged to submit the form below (You will need to be logged into your VCU Google account.):</p>
+                         <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScpO42w9fDfI3gB51H2eo1AyG8ovyNqwazIz5tGBFN2r38F6A/viewform">Refer a student for additional support</a>
+                          <!-- <button class="btn btn-primary" data-toggle="modal" data-target="#facHelpModal">Refer a student for additional support</button> -->
                       </div>
                   </div>
               </div>
